# VFO_esp32_WROOM_esp-idf

./: .gitignore  Buttons.txt  CLAUDE.md  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev.old
.github/workflows/: build.yml
Kicad files/: VFO na esp32.kicad_pcb  VFO na esp32.kicad_prl  VFO na esp32.kicad_pro  VFO na esp32.kicad_sch
Kicad files/VFO na esp32/: VFO na esp32.kicad_pcb  VFO na esp32.kicad_prl  VFO na esp32.kicad_pro  VFO na esp32.kicad_sch  fp-info-cache
include/: buttons.h  config.h  dial.h  dial_prm.h  display.h  encoder.h  font.h  font12.h  font16.h  font20.h  graph.h  nvs_storage.h  si5351.h  ui_overlay.h  version.h  vfo_state.h
scripts/: gen_version.py  gen_version_idf.py
src/: CMakeLists.txt  buttons.c  dial.c  display.c  encoder.c  graph.c  main.c  nvs_storage.c  si5351.c  ui_overlay.c  vfo_state.c
